# hawktracer-converter

./: .travis.yml  Cargo.toml  LICENSE  NEWS  README.md  appveyor.yml
resources/test/: chrome_tracing_test_trace.json  label_map_invalid.txt  label_map_valid.txt  test_trace.htdump
src/: converter_manager.rs  converters.rs  label_mapping.rs  lib.rs  main.rs
src/converters/: chrome_tracing_converter.rs  debug_converter.rs  flamegraph_converter.rs
tests/: cli_tests.rs
