[package]
name = "hawktracer-converter"
version = "0.2.0"
authors = ["Marcin Kolny <marcin.kolny@gmail.com>"]
description = "Converts HawkTracer output format to human-readable/well-known trace event viewers format"
edition = "2018"
license = "MIT"
maintenance = { status = "actively-developed" }
homepage = "https://www.hawktracer.org"
repository = "https://github.com/loganek/hawktracer-converter"
readme = "README.md"

travis-ci = { repository = "loganek/hawktracer-converter" }

[badges]
appveyor = { repository = "loganek/hawktracer-converter" }
travis-ci = { repository = "loganek/hawktracer-converter" }

[lib]
name = "hawktracer_converter_lib"
path = "src/lib.rs"

[[bin]]
name = "hawktracer-converter-rs"
path = "src/main.rs"

[dependencies]
hawktracer-parser = "0.2.3"
clap = "2.33.0"
chrono = "0.4.10"
indicatif = "0.13.0"
ctrlc = "3.1.3"

[dev-dependencies]
serde_json = "1.0.44"
assert-json-diff = "1.0.1"